@@ -72,6 +72,10 @@
         appearance but not all fonts are available in this quality,
         e.g. the Terminal font in small sizes is not and this option may be
         used if wider fonts selection is more important than higher quality.
+    @flag{msw.window.no-composited}
+        If set to 1, disables the use of composited, i.e. double-buffered,
+        windows by default in wxMSW. This is not recommended, but can be useful
+        for debugging or working around redraw problems in the existing code.
     @endFlagTable
 
 
